--- a/VITE-PROJECT/package.json
+++ b/VITE-PROJECT/package.json
@@ -1,14 +1,12 @@
 {
   "name": "vite-project",
-  "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
   },
   "devDependencies": {
-    "vite": "^4.0.0"
+    "vite": "^2.6.4"
   }
 }
