--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -1,12 +1,14 @@
 {
   "name": "vite-project",
+  "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite preview"
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.6.4"
+    "vite": "^4.0.0"
   }
 }
